2002-08-29  Nicolas Burrus  <nes@lrde.epita.fr>

	* src/modem.c: Update with log and debug.
	* configure.ac: Add enable-werror and lib/ handling.
	* src/misc.c: Call ip-up/ip-down scripts only when non null path.
	* include/common.h, lib/Makefile.am, lib/getopt.c, lib/getopt.h, 
	lib/getopt1.c: New files.
	* src/main.c, src/options.c, src/options.h: Add command line options 
	handling.

2002-08-29  Jean-Charles Salzeber <jc@varspool.net>

	* src/modem.c: Trivial cleanups.
	* include/prot30.h, src/p30tcpip.c, src/prot30.c: More robust protocol
	handling.
	* src/modem.c: Fixed a bug in wait_for.
	
2002-08-29  Nicolas Burrus  <nes@lrde.epita.fr>

	* src/log.c, include/log.h: New files.
	* src/main.c: Call init_log.
	* src/options.c: Adjust debug_level.

2002-08-28  Jean-Charles Salzeber <jc@varspool.net>

	* src/modem.c, include/modem.h: Merge with nicolas's changes.
	* src/prot30.c, src/buffer.c, include/buffer.h: Cleanups.
	* src/p30tcpip.c: More code for sending ip.

2002-08-28  Nicolas Burrus  <nes@lrde.epita.fr>

	* src/modem.c, include/modem.h: Fix echo problem. Add modem_readline.

2002-08-28  Laurent Carlier <lordheavy@infonie.fr>
	* src/options.c, include/option.h : check for general config
	file and personnal file ( parse_config() ).
	* src/main.c : use parse_config() instead of parse_config_file(),
	see above.

2002-08-27  Nicolas Burrus  <nes@lrde.epita.fr>

	* src/options.c: Include config.h.
	* src/linux/tun.c, src/openbsd/tun.c, src/freebsd/tun.c: Likewise.
	* configure.ac: Ask config.h.

2002-08-26  Nicolas Burrus  <nes@lrde.epita.fr>

	* src/linux/tun.c: Remove warning.
	* src/p30data.c: Likewise.
	* src/main.c: Add exit on config_set failure.
	* configure.ac, Makefile.am, config/Makefile.am, include/Makefile.am, 
	src/Makefile.am, src/linux/Makefile.am, src/openbsd/Makefile.am, 
	src/freebsd/Makefile.am: New files.